<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello in my first app</string>
    <string name="data_button">Data</string>
    <string name="preview_button">Preview</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="name_hint">Enter your name here</string>
    <string name="surname">Surname:</string>
    <string name="surname_hint">Enter your surname here</string>
    <string name="save">Save</string>
    <string name="allData">All name and surname in database</string>
    <string name="all_data">All data</string>

</resources>
